--- a/basic/android_crash.html
+++ b/basic/android_crash.html
@@ -32,7 +32,7 @@
 
 
         
-    <div class="book" data-level="1" data-basepath=".." data-revision="1421670761573">
+    <div class="book" data-level="1" data-basepath=".." data-revision="1421671033171">
     
 
 <div class="book-summary">
@@ -180,8 +180,8 @@
 <li>Crittercism</br></li>
 <li>BugsNag</br></li>
 <li>Apphance</br></li>
-<li>Bugsense</br></li>
-<li>还有些开源的</br></li>
+<li>Bugsense</br>
+还有些开源的</br></li>
 <li>Application Crash Report for Android (ACRA)</br></li>
 <li>crashlystics</br></li>
 <li>Android Remote Stacktrace</br></li>
